--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body onload="Redirect()">
 <script>
 function Redirect() {
-  location.replace("https://glideandseek.com/?compDataUrl=https://raw.githubusercontent.com/NeilMC311/hw/main/hw.json")
+  location.replace("https://glideandseek.com/?compDataUrl=https://glidingcomp.au/austrack/austrack.json")
 }
 </script>
 
